--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "path": "^0.12.7",
     "sequelize": "^6.37.3",
     "socket.io": "^4.8.0"
   },
@@ -29,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "jest": "^29.7.0",
     "mocha": "^10.7.3",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
